Add extra check if device management is supported to License Check request.

NOPRESUBMIT=true

Bug: 776484
Change-Id: I13e112181571580052846cd24935284955e15768
Reviewed-on: https://chromium-review.googlesource.com/1090720
Commit-Queue: Denis Kuznetsov <antrim@chromium.org>
Reviewed-by: Lutz Justen <ljusten@chromium.org>
Cr-Commit-Position: refs/heads/master@{#570411}
Former-commit-id: edb06ac93c04f61b4864b59b8a701b3d841932fd